Bug 812121 - Allow drawArrays/Elements without vertex attrib arrays - r=bjacob