content/canvas/src/WebGLContext.cpp
@@ -172,6 +172,9 @@ WebGLContext::WebGLContext()
     mAlreadyWarnedAboutFakeVertexAttrib0 = false;
 
     mLastUseIndex = 0;
+
+    mMinInUseAttribArrayLengthCached = false;
+    mMinInUseAttribArrayLength = 0;
 }
 
 WebGLContext::~WebGLContext()
